--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,19 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Controllers.Activities.SearchActivity">
+        <activity android:name=".Controllers.Activities.SearchActivity"
+                  android:label="Search Articles"
+                  android:parentActivityName=".Controllers.Activities.MainActivity">
+                <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".Controllers.Activities.MainActivity"/>
         </activity>
-        <activity android:name=".Controllers.Activities.NotificationActivity">
+        <activity android:name=".Controllers.Activities.NotificationActivity"
+                  android:label="Notifications"
+                  android:parentActivityName=".Controllers.Activities.MainActivity">
+                <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".Controllers.Activities.MainActivity"/>
         </activity>
     </application>
 
