Add Search results with SearchActivity and SearchResultsActivity. Created some class for get and set search results

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         </activity>
         <activity android:name=".Controllers.Activities.WebViewActivity">
         </activity>
+        <activity android:name=".Controllers.Activities.SearchResultsActivity">
+        </activity>
     </application>
 
 </manifest>
