--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     implementation 'com.github.bumptech.glide:glide:4.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
+    testCompile 'org.mockito:mockito-core:2.13.0'
+    androidTestCompile 'org.mockito:mockito-android:2.7.22'
 }
