--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             android:name=".utils.AlarmReceiver"
             android:exported= "true"/>
 
-        <activity android:name=".controllers.activities.MainActivity">
+        <activity android:name=".controllers.activities.MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,7 +28,8 @@
         <activity
             android:name=".controllers.activities.SearchActivity"
             android:label="Search Articles"
-            android:parentActivityName=".controllers.activities.MainActivity">
+            android:parentActivityName=".controllers.activities.MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".controllers.activities.MainActivity"/>
@@ -36,18 +38,21 @@
         <activity
             android:name=".controllers.activities.NotificationActivity"
             android:label="Notifications"
-            android:parentActivityName=".controllers.activities.MainActivity">
+            android:parentActivityName=".controllers.activities.MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".controllers.activities.MainActivity"/>
         </activity>
 
-        <activity android:name=".controllers.activities.WebViewActivity">
+        <activity android:name=".controllers.activities.WebViewActivity"
+                  android:screenOrientation="portrait">
         </activity>
 
         <activity android:name=".controllers.activities.SearchResultsActivity"
                   android:label="Search Articles"
-                  android:parentActivityName=".controllers.activities.SearchActivity">
+                  android:parentActivityName=".controllers.activities.SearchActivity"
+                  android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".controllers.activities.SearchActivity"/>
